# ax25sdl

./: .gitignore  CLAUDE.md  Directory.Packages.props  README.md  ax25sdl.slnx
.github/workflows/: ci.yml  publish.yml
codegen/: ax25sdl.slnx
docs/: sdl-primer.md  sdl-transcription-runbook.md
docs/adr/: 0001-sdl-dsl.md
go-spec/: go.mod
go-spec/ax25sdl/: awaiting_connection.g.go  awaiting_connection.g_test.go  awaiting_release.g.go  awaiting_release.g_test.go  awaiting_v22_connection.g.go  awaiting_v22_connection.g_test.go  connected.g.go  connected.g_test.go  disconnected.g.go  disconnected.g_test.go  subroutines.g.go
spec-sdl/: actions.yaml  ax25-sdl-all-shapes.graphml  ax25-sdl-palette.graphml  events.yaml
spec-sdl/schema/: sdl-citations.schema.json  sdl-machine.schema.json  sdl-subroutines.schema.json
spec-sdl/v2.2/: README.md
spec/c/: CMakeLists.txt
spec/c/src/: awaiting_connection.g.c  awaiting_release.g.c  awaiting_v22_connection.g.c  ax25sdl.g.h  ax25sdl.h  connected.g.c  disconnected.g.c  subroutines.g.c  timer_recovery.g.c
spec/c/test/: awaiting_connection.g.test.c  awaiting_release.g.test.c  awaiting_v22_connection.g.test.c  connected.g.test.c  disconnected.g.test.c  timer_recovery.g.test.c
spec/csharp/: DataLink_AwaitingConnection.g.cs  DataLink_AwaitingConnection22.g.cs  DataLink_AwaitingRelease.g.cs  DataLink_AwaitingV22Connection.g.cs  DataLink_Connected.g.cs  DataLink_Disconnected.g.cs  DataLink_Subroutines.g.cs  DataLink_TimerRecovery.g.cs  Packet.Ax25.Sdl.csproj  TransitionSpec.cs
spec/go/: README.md  go.mod
spec/json/: awaiting_connection.g.json  awaiting_release.g.json  awaiting_v22_connection.g.json  connected.g.json  disconnected.g.json  index.json  schema.json  subroutines.g.json  timer_recovery.g.json
spec/rust/: Cargo.toml
spec/rust/src/: awaiting_connection.g.rs  awaiting_release.g.rs  awaiting_v22_connection.g.rs  connected.g.rs  disconnected.g.rs  lib.rs  subroutines.g.rs  timer_recovery.g.rs  types.rs
spec/ts/: README.md  (+1 more)
ts-spec/: README.md
(+154 files in other folders)
